NAS-000000: Fix tn-icon alignment in editable and ix-input components

--- a/src/app/modules/forms/editable/editable.component.scss
+++ b/src/app/modules/forms/editable/editable.component.scss
@@ -1,5 +1,6 @@
 .edit-trigger {
   all: unset;
+  align-items: center;
   background-color: var(--alt-bg1);
   color: var(--primary-txt);
   column-gap: 2px;
@@ -35,9 +36,6 @@
   }
 
   .edit-trigger-icon {
-    height: 18px;
     margin-left: 2px;
-    margin-top: -1px;
-    width: 18px;
   }
 }
